# Honey_Bun

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  dockerfile  package.json  pyproject.toml  requirements.txt  tailwind.config.js
nginx/: default.conf  nginx.conf
src/catalog/: models.py
src/catalog/migrations/: 0001_initial.py
src/ecommerce/: settings.py  urls.py
src/pages/: urls.py  views.py
src/scripts/: initializer.sh  tailwindcss.sh  wrapper.sh
src/static/css/: main.css  output.css
src/templates/: base.html  components.yml
src/templates/base/: base.html
src/templates/components/: navbar.html
src/templates/components/controls/: search.html
src/templates/components/icons/: email_icon.html  github_icon.html  linkedin_icon.html
src/templates/components/layouts/: footer.html  navbar.html
src/templates/components/ui/: add_to_cart.html  buy_product.html  medium_card.html  recomendation_card.html  recommendation_card.html  see_product.html  small_card.html  sub_title.html  title.html
src/templates/pages/: home.html
src/templates/views/: home.html  product_details.html  profile.html  special_offers.html
src/widgets/: __init__.py  navbar.py
src/widgets/icons/: email_icon.py  github_icon.py  linkedin_icon.py
src/widgets/layouts/: footer.py  navbar.py
src/widgets/ui/: add_to_cart.py  buy_product.py  medium_card.py  recomendation_card.py  recommendation_card.py  see_product.py  small_card.py  sub_title.py  title.py
