[project]
name = "honey-bun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-components>=0.141.2",
    "django-compressor>=4.5.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "python-decouple>=3.8",
]
