[project]
name = "honey-bun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-allauth-ui>=1.8.1",
    "django-allauth[socialaccount]>=65.10.0",
    "django-browser-reload>=1.18.0",
    "django-components>=0.141.2",
    "django-compressor>=4.5.1",
    "django-debug-toolbar>=6.0.0",
    "django-extensions>=4.1",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "python-decouple>=3.8",
    "slippers>=0.6.2",
]
